--- a/nano/templates/public.html
+++ b/nano/templates/public.html
@@ -38,6 +38,7 @@
           <div class="account">
             <ul>
               <li><a href="{{ url_for('account.login') }}">Login</a></li>
+              <li><a href="{{ url_for('account.signup') }}">Create an account</a></li>
             </ul>
           </div>
         {% endif %}
