--- a/nano/templates/public.html
+++ b/nano/templates/public.html
@@ -20,6 +20,8 @@
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
     {% endblock %}
+    {% block head_after %}
+    {% endblock %}
   </head>
   <body>
     <div class="container">
