WIP: subscription + ui tweaks

--- a/nano/templates/account/_filter.html
+++ b/nano/templates/account/_filter.html
@@ -1,7 +1,8 @@
 <div class="filters">
   <div class="left">
     <a href="{{ url_for('account.index') }}"><img src="/static/img/contact_card_icon&16.png"> Your account</a>
-    <a href="{{ url_for('account.business') }}"><img src="/static/img/cube_icon&16.png" /> Business profile</a>
+    <a href="{{ url_for('account.business') }}"><img src="/static/img/1372607691_93.png" /> Business profile</a>
+    <a href="{{ url_for('account.subscription') }}"><img src="/static/img/sq_up_icon&16.png" /> Subscription</a>
     <a href="{{ url_for('settings.index') }}"><img src="/static/img/cog_icon&16.png" /> Settings</a>
   </div>
   <div class="right">
