--- a/nano/templates/account/business.html
+++ b/nano/templates/account/business.html
@@ -31,7 +31,7 @@
         {{ render_input(form.country) }}
         {{ render_input(form.post_code) }}
         <div class="field">
-          <button class="button normal" type="submit">Save</button>
+          <button class="btn btn-primary" type="submit">Save</button>
         </div>
       </div>
     </form>
