--- a/nano/templates/account/index.html
+++ b/nano/templates/account/index.html
@@ -21,7 +21,7 @@
         {{ render_input(form.password, autocomplete='off') }}
         {{ render_input(form.password_confirm, autocomplete='off') }}
         <div class="field">
-          <button class="button normal" type="submit">Save</button>
+          <button class="btn btn-primary" type="submit">Save</button>
         </div>
       </div>
     </form>
