--- a/nano/templates/settings/custom_fields.html
+++ b/nano/templates/settings/custom_fields.html
@@ -43,7 +43,7 @@
           </div>
         </div>
        <div class="field">
-          <button class="button normal" type="submit">Save</button>
+          <button class="btn btn-primary" type="submit">Save</button>
         </div>
       </div>
     </form>
