--- a/nano/templates/settings/tax_rates.html
+++ b/nano/templates/settings/tax_rates.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="field">
-          <button class="button normal" type="submit">Save</button>
+          <button class="btn btn-primary" type="submit">Save</button>
         </div>
       </div>
     </form>
