--- a/nano/templates/account/subscription.html
+++ b/nano/templates/account/subscription.html
@@ -3,5 +3,37 @@
 
 {% block content %}
   {% include 'account/_filter.html' %}
+    
+  <h1>Subscription</h1>
+  
+
+  <div class="workspace-inner">
+
+    <p>You are currently subscribed to the {{ plan.name }} plan</p>
+
+    {% if plan.name == 'Free' %}
+      <a href="{{ url_for('account.subscribe', plan_id=2, upgrade=1) }}">Update to Pro account</a>
+    {% endif %}
+
+    {% if plan.billing_interval %}
+      <h3>Billing</h3>
+      <table class="table ">
+        <thead>
+          <th>Date</th>
+          <th>Amount</th>
+          <th>Success</th>
+        </thead>
+        {% for transaction in transactions %}
+          <tr>
+            <td>{{ transaction.created_at.isoformat() }}</td>
+            <td>{{ transaction.amount }}</td>
+            <td>{% print 'Yes' if transaction.success else 'No' %}</td>
+          </tr>
+        {% endfor %}
+      </table>
+    {% endif %}
+
+
+  </div>
 
 {% endblock %}
