--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -92,6 +92,9 @@
 </div>
 {% endif %}
 
+
+{% include 'invoice/_modals.html' %}
+
 <script type="text/javascript">
   var view = new DraftInvoiceView({
     el: "#manage",
