--- a/nano/templates/invoice/email.html
+++ b/nano/templates/invoice/email.html
@@ -1,33 +1,11 @@
-{% extends 'layout.html' %}
 {% from 'macros/_misc.html' import render_input %}
-{% block content %}
-  
-  {% include 'invoice/_controls.html' %}
-  
-  <ul class="breadcrumb">
-    <li><a href="{{ url_for('invoice.index') }}">Invoices</a> <span class="divider">/</span></li>
-    <li><a href="{{ url_for('invoice.show', id=invoice.id) }}">Invoice {{ invoice.reference }}</a> <span class="divider">/</span></li>
-    <li class="active">Email</li>
-  </ul>
 
-  <div class="workspace-inner">
-    <form class="inline email create" method="post" action="{{ url_for('invoice.email', id=invoice.id) }}">
-        <div class="header">
-          Send invoice email
-        </div>
-        <div class="fields">
-          {{ render_input(form.to) }}
-          {{ render_input(form.bcc) }}
-          {{ render_input(form.subject) }}
-          {{ render_input(form.message) }}
+<div>
+<form id="email-form" class="form inline" method="post" action="{{ url_for('invoice.email', id=invoice.id) }}">
+    {{ render_input(form.to) }}
+    {{ render_input(form.bcc) }}
+    {{ render_input(form.subject) }}
+    {{ render_input(form.message) }}
+</form>
+</div>
 
-          <div class="field">
-            <button class="btn btn-primary">Send</button>
-          </div>
-        </div>
-      </form>
-    </div>
-
-  </div>
-
-{% endblock %}
