--- a/nano/templates/home/index.html
+++ b/nano/templates/home/index.html
@@ -1,4 +1,27 @@
 {% extends "public.html" %}
 {% block content %}
-  <p>homepage</p>
+  
+  <div class="workspace-inner">
+
+    <p>Opensource invoicing webapp. 
+   Fork the project at <a href="https://github.com/sanjeevan/nanoinvoice">https://github.com/sanjeevan/nanoinvoice</a>
+    
+    
+    <p>Current features:</p>
+    
+    <ul>
+      <li>Client portal</li>
+      <li>Supports invoice payments via stripe and gocardless</li>
+      <li>Tax, VAT support</li>
+      <li>Export invoice to PDF</li>
+    </ul>
+
+    
+    <p>Backend built using using Python and Flask. Frontend built using
+    Backbone.js and jQuery (+plugins), CSS built using SCSS</p>
+
+
+    <p>See the README.md file for instructions on how to install</p>
+
+  </div>
 {% endblock %}
