--- a/nano/templates/account/_filter.html
+++ b/nano/templates/account/_filter.html
@@ -6,7 +6,7 @@
   </div>
   <div class="right">
 
-    <a href="{{ url_for('account.subscription') }}"><img src="/static/img/sq_up_icon&16.png" /> Subscription</a>
+    <a href="{{ url_for('subscription.index') }}"><img src="/static/img/sq_up_icon&16.png" /> Subscription</a>
   </div>
 </div>
 
