--- a/nano/static/src/sass/_invoice.scss
+++ b/nano/static/src/sass/_invoice.scss
@@ -61,3 +61,18 @@ html[xmlns] .pagestyle {
   }
 }
 
+.invoices-by-year {
+  margin-bottom: 1em;
+  ul {
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+  }
+  ul li {
+    display: inline-block;
+    list-style: none;
+    margin-right: 5px;
+
+    &.active { font-weight: bold }
+  }
+}
