--- a/nano/templates/invoice/index.html
+++ b/nano/templates/invoice/index.html
@@ -1,35 +1,44 @@
 {% extends 'layout.html' %}
 {% block content %}
-  
   <h1>Invoices <a href="{{ url_for('invoice.create') }}" class='btn btn-mini btn-primary'>New invoice</a></h1>
 
   {% if invoices|length == 0 %}
-    
     <p class="first-create">You haven't created any invoices yet. <a href="{{ url_for('.create') }}">Get started</a></p>
-    
   {% else %}
     <div class="workspace-inner">
-    <table class="table table-striped table-hover data-list invoice-data-list">
-      <thead class="data-list-header">
-        <td class="col due">Due date</td>
-        <td class="col ref">Reference No.</td>
-        <td class="col name">Client</td>
-        <td class="col total">Total</td>
-        <td class="col status">Status</td>
-      </thead>
-     <tbody>
-      {% for invoice in invoices %}
-          <tr class="clickable" data-id="{{ invoice.id }}">
-            <td class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</td>
-            <td class="col ref">{{ invoice.reference }}</td>
-            <td class="col name">{{ invoice.contact.full_name() }} <br> <span class="org"><b>Company:</b> {{ invoice.contact.organisation|default('No organisation', True) }}</span></td>
-            <td class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</td>
-            <td class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></td>
-          </tr>
+
+    <div class="invoices-by-year">
+      View invoices by year:
+      <ul>
+        <li><a href="{{ url_for('invoice.index') }}">All</a></li>
+        {% for year in years %}
+        <li class="{{ 'active' if year == selected_year }}"><a href="{{ url_for('invoice.index', year=year) }}">{{ year }}</a></li>
         {% endfor %}
-      </tbody>
-    </table>
-  </div>
+      </ul>
+    </div>
+      <table class="table table-striped table-hover data-list invoice-data-list">
+        <thead class="data-list-header">
+          <td class="col issue">Issue date</td>
+          <td class="col due">Due date</td>
+          <td class="col ref">Reference No.</td>
+          <td class="col name">Client</td>
+          <td class="col total">Total</td>
+          <td class="col status">Status</td>
+        </thead>
+       <tbody>
+        {% for invoice in invoices %}
+            <tr class="clickable" data-id="{{ invoice.id }}">
+              <td class="col issue">{{ invoice.date_issued.strftime('%d %B %Y') }}</td>
+              <td class="col due">{{ invoice.due_date.strftime('%d %B %Y') }}</td>
+              <td class="col ref">{{ invoice.reference }}</td>
+              <td class="col name">{{ invoice.contact.full_name() }} <br> <span class="org"><b>Company:</b> {{ invoice.contact.organisation|default('No organisation', True) }}</span></td>
+              <td class="col total"><span class='currency-code'>{{ invoice.currency_code }}</span> {{ invoice.total|format_currency }}</td>
+              <td class="col status"><span class='label label-{{ invoice.get_status() }}'>{{ invoice.get_status() }}</span></td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
   {% endif %}
 
   <script type="text/javascript">
