--- a/nano/templates/subscription/index.html
+++ b/nano/templates/subscription/index.html
@@ -12,7 +12,7 @@
     <p>You are currently subscribed to the {{ plan.name }} plan</p>
 
     {% if plan.name == 'Free' %}
-      <a href="{{ url_for('account.subscribe', plan_id=2, upgrade=1) }}">Update to Pro account</a>
+      <a href="{{ url_for('subscription.create', plan_id=2, upgrade=1) }}">Update to Pro account</a>
     {% endif %}
 
     {% if plan.billing_interval %}
