--- a/nano/static/src/sass/_layout.scss
+++ b/nano/static/src/sass/_layout.scss
@@ -5,9 +5,6 @@ body, html {
   color: #333;
   background-color: #356AA0;
   @include background-image(radial-gradient(center, ellipse cover, #356AA0 0%, lighten(#356AA0, 10%) 44%, lighten(#356AA0, 20%) 100%));
-}
-
-body, html * {
   -webkit-font-smoothing: antialiased;
 }
 
@@ -63,7 +60,8 @@ body, html * {
 }
 
 .sidebar {
-
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .workspace {
