--- a/nano/static/src/sass/_nav.scss
+++ b/nano/static/src/sass/_nav.scss
@@ -1,17 +1,17 @@
 
 .subnav {
-  background-color: #efefef; 
+  background-color: #efefef;
 
   ul li {
     display: inline-block;
     padding: 8px;
     a {
-      text-decoration: none; 
+      text-decoration: none;
       color: #777777;
       text-shadow: 0 1px 0 #fff;
     }
   }
-  
+
   ul {
     margin: 0;
     border-bottom: 1px solid #ccc;
@@ -26,18 +26,16 @@
   li {
     text-align: center;
     display: block;
-    margin-left: -16px;
-
-
     a:hover {
       background-color: none;
     }
 
     a {
-      width: 64px;
-      height: 64px;
       @include text-shadow(0px 1px 0px #fff);
+      height: 64px;
       color: #777;
+      text-align: center;
+      display: block;
     }
   }
 }
