--- a/nano/templates/client/show.html
+++ b/nano/templates/client/show.html
@@ -4,7 +4,7 @@
 {% block content %}
 
  <ul class="breadcrumb">
-    <li><a href="{{ url_for('client.index') }}">Clients</a> <span class="divider">/</span></li>
+    <li><a href="{{ url_for('client.index') }}">Clients</a></li>
     <li class="active">{{ contact.full_name() }} - {{ contact.organisation }}</li>
   </ul>
   
