--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -3,7 +3,7 @@
 
 {% include 'invoice/_controls.html' %}
 <ul class="breadcrumb">
-  <li><a href="{{ url_for('invoice.index') }}">Invoices</a> <span class="divider">/</span></li>
+  <li><a href="{{ url_for('invoice.index') }}">Invoices</a></li>
   <li class="active">Invoice {{ invoice.reference }}</li>
 </ul>
 
