--- a/nano/templates/subscription/cancel.html
+++ b/nano/templates/subscription/cancel.html
@@ -6,14 +6,11 @@
   <h1>Subscription</h1>
   <div class="workspace-inner">
 
-
     <p>Are you sure you want to cancel your subscription, you will automatically be downgraded to the free plan</p>
 
-
     <form method="post" action="{{ url_for('subscription.cancel') }}">
-      <button type="submit">Cancel subscription</button>
+      <button class="btn" type="submit">Yes, cancel my subscription</button>
     </form>
-
 
   </div>
 
