--- a/nano/templates/subscription/index.html
+++ b/nano/templates/subscription/index.html
@@ -12,8 +12,11 @@
     <p>You are currently subscribed to the {{ plan.name }} plan</p>
 
     {% if plan.name == 'Free' %}
-      <a href="{{ url_for('subscription.create', plan_id=2, upgrade=1) }}">Update to Pro account</a>
+      <a class="btn" href="{{ url_for('subscription.create', plan_id=2, upgrade=1) }}">Update to Pro account</a>
+    {% else %}
+      <a class="btn" href="{{ url_for('subscription.cancel') }}">Cancel subscription</a>
     {% endif %}
+
 
     {% if plan.billing_interval %}
       <h3>Billing</h3>
