--- a/nano/templates/invoice/create.html
+++ b/nano/templates/invoice/create.html
@@ -3,7 +3,7 @@
 {% block content %}
   
   <ul class="breadcrumb">
-    <li><a href="{{ url_for('invoice.index') }}">Invoices</a> <span class="divider">/</span></li>
+    <li><a href="{{ url_for('invoice.index') }}">Invoices</a></li>
     <li class="active">New invoice</li>
   </ul>
 
