--- a/nano/templates/payment/edit.html
+++ b/nano/templates/payment/edit.html
@@ -4,8 +4,8 @@
 
 {% include 'invoice/_controls.html' %}
 <ul class="breadcrumb">
-  <li><a href="#">Invoices</a> <span class="divider">/</span></li>
-  <li><a href="{{ url_for('invoice.show', id=invoice.id) }}">Invoice {{ invoice.reference }}</a> <span class="divider">/</span></li>
+  <li><a href="#">Invoices</a></li>
+  <li><a href="{{ url_for('invoice.show', id=invoice.id) }}">Invoice {{ invoice.reference }}</a></li>
   <li class="active">Update payment</li>
 </ul>
 
