--- a/nano/static/src/sass/_signup.scss
+++ b/nano/static/src/sass/_signup.scss
@@ -67,6 +67,11 @@
     select {
       font-size: 18px;
     }
+
+    .form-control { 
+      width: auto;
+      display: inline-block;
+    }
   }
 
 }
