--- a/nano/templates/client/index.html
+++ b/nano/templates/client/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-  <h1>Clients <a class="btn btn-mini btn-primary" href="{{ url_for('client.create') }}">New client</a></h1>
+  <h1>Clients <a class="btn btn-xs btn-primary" href="{{ url_for('client.create') }}">New client</a></h1>
 
   {% if contacts|length == 0 %}
     
