--- a/nano/templates/home/dashboard.html
+++ b/nano/templates/home/dashboard.html
@@ -10,11 +10,11 @@
   </div>
     
     <div class='row'>
-        <div class="span5">
+        <div class="col-md-6">
           <div class="workspace-inner">
             <h4>Last 5 payments</h4>
 
-            <table class="table table-striped table-hover table-condensed data-list" style='font-size: 12px;'>
+            <table class="table table-striped table-hover data-list">
               <thead class='data-list-header'>
                 <tr>
                   <th>Date</th>
@@ -45,11 +45,11 @@
           </div>
         </div>
 
-        <div class="span6">
+        <div class="col-md-6">
           <div class="workspace-inner">
             <h4>Last 5 invoices</h4>
 
-            <table class="table table-striped table-hover table-condensed data-list" style='font-size: 12px;'>
+            <table class="table table-striped table-hover data-list">
               <thead class="data-list-header">
                 <th class="col due">Due</th>
                 <th class="col ref">Reference</th>
