--- a/nano/templates/invoice/_footer.html
+++ b/nano/templates/invoice/_footer.html
@@ -16,8 +16,8 @@
 <tr id="total_tr">
   <td colspan="2" class="inv_btn">
     {% if invoice.status == 'draft' %}
-      <a href="#" class="btn btn-primary" id="add_invoice_item" title="Add Invoice Item">Add Invoice Item</a> &nbsp; 
-    <a href="#" class="btn" id="reorder_invoice_items">Reorder</a>
+      <a href="#" class="btn btn-sm btn-primary" id="add_invoice_item" title="Add Invoice Item">Add Invoice Item</a> &nbsp; 
+    <a href="#" class="btn btn-sm btn-default" id="reorder_invoice_items">Reorder</a>
     {% endif %}
   </td>
   {% set col_span = 1 %}
