--- a/nano/templates/invoice/show.html
+++ b/nano/templates/invoice/show.html
@@ -81,8 +81,8 @@
           <td>{{ payment.amount|format_currency }} {{ payment.currency_code }}</td>
           <td>
             {% if payment.method == 'manual' %}
-              <a class="btn btn-mini" href="{{ url_for('payment.edit', id=payment.id) }}">Edit</a>
-              <a class="btn btn-danger btn-mini" href="{{ url_for('payment.delete', id=payment.id) }}">Delete</a>
+              <a class="btn btn-xs" href="{{ url_for('payment.edit', id=payment.id) }}">Edit</a>
+              <a class="btn btn-danger btn-xs" href="{{ url_for('payment.delete', id=payment.id) }}">Delete</a>
             {% endif %}
           </td>
         </tr>
