--- a/nano/templates/subscription/create.html
+++ b/nano/templates/subscription/create.html
@@ -23,43 +23,42 @@
     <div class="secure-info">
       <img src="/static/img/white/padlock_closed_icon&24.png"> This is a secure 128bit SSL encrypted payment. You're safe
     </div>
-    <form id="payment-form" class="form" method="post" action="">
+    <form role="form" id="payment-form" method="post" action="">
       <span class="payment-errors"></span>
       {{ form.csrf_token }}
       {{ form.stripe_token }}
       {{ form.plan_id }}
-      <div class="control-group {% print 'error' if form.name.errors else '' %}">
+      <div class="form-group {% print 'error' if form.name.errors else '' %}">
         <label>Name</label>
         <div class="controls controls-row">
-          {{ form.name(placeholder='Name on card') }}
+          {{ form.name(placeholder='Name on card', class='form-control') }}
         </div>
       </div>
-      <div class="control-group {% print 'error' if form.card_number.errors else '' %}">
+      <div class="form-group {% print 'error' if form.card_number.errors else '' %}">
         <label>Card number</label>
         <div class="controls controls-row">
-          {{ form.card_number(size=20, placeholder='•••• •••• •••• ••••') }}
+          {{ form.card_number(size=20, placeholder='•••• •••• •••• ••••', class='form-control') }}
         </div>
       </div>
 
-      <div class="control-group {% print 'error' if form.cvc.errors or form.cvc.errors else '' %}">
-        <div class="controls controls-row">
-          <div class="expire pull-left">
-            <label>Expiration date</label>
-           {{ form.expire_month(class='input-mini', placeholder='Month') }}
-           {{ form.expire_year(class='input-small', placeholder='Year') }}
+      <div class="form-group {% print 'error' if form.cvc.errors or form.cvc.errors else '' %}">
+        <div class="row">
+          <div class="expire col-sm-6">
+            <label>Expiration date</label><br/>
+           {{ form.expire_month(class='form-control inline input-sm', placeholder='Month') }}
+           {{ form.expire_year(class='form-control input-sm', placeholder='Year') }}
           </div>
-          <div class="cvc pull-right">
-            <label>Card code</label>
-           {{ form.cvc(class='input-mini', size=3, maxlength=3, placeholder='CVC') }}
+          <div class="cvc col-sm-6">
+            <label>Card code</label></br>
+           {{ form.cvc(class='form-control input-sm', size=3, maxlength=3, placeholder='CVC') }}
            <img id="cvc-image" src="/static/img/1372540145_credit_card blue.png">
           </div>
         </div>
       </div>
-
       <div class="form-actions">
         <button class="btn btn-block btn-success">Complete transaction</button>
       </div>
-
+      <br>
       <div class="billing-info">Billed at £{{ plan.amount }} per {{ plan.interval_name }} </div>
       {% if request.args.get('upgrade') %}
         <center><p class="mini-text"><a href="{{ url_for('subscription.index') }}">Back to your account</a></center>
